// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageAccessDenied w/o message and btn 1`] = `
<div
  class="page"
>
  <div
    class="content content"
  >
    <div
      class="header"
    >
      TestHeader
    </div>
    <div
      class="buttonBlock"
    />
  </div>
</div>
`;

exports[`PageAccessDenied with message and button 1`] = `
<div
  class="page"
>
  <div
    class="content content"
  >
    <div
      class="header"
    >
      TestHeader
    </div>
    <div
      class="message"
    >
      TestMessage
    </div>
    <div
      class="buttonBlock"
    >
      <button
        class="btn btn-green btn-contained btn-x-large btnSkeuomorph button"
        data-test-id="button-submit"
        type="button"
      >
        <span
          class="buttonLabel"
        >
          TestButtonLabel
        </span>
      </button>
    </div>
  </div>
</div>
`;
